--- a/pages/About/about.html
+++ b/pages/About/about.html
@@ -1,8 +1,8 @@
 <psk-page title="PrivateSky  Open Source Platform">
     PrivateSky open source code was obtained from a  research project coordinated by  Alexandru Ioan Cuza University from Iasi in collaborations  with the following companies:  Axiologic Research (original code contributor),Heaven Solutions, Romsoft, Code932, DPO, Space Giant, Junio.
-    All the code in PrivateSky is licensed as Open Source code. The copyright belongs to the original authors: persons or companies but everything that is published under <a href="github.com/PrivateSky">PrivateSky Github repositories</a> is licensed as MIT and LPGPL.
+    All the code in PrivateSky is licensed as Open Source code. The copyright belongs to the original authors: persons or companies but everything that is published under <a href="https://github.com/PrivateSky">PrivateSky Github repositories</a> is licensed as MIT and LPGPL.
 
-    <psk-img src="PrivateSky/PrivateSky.png"></psk-img>
+    <psk-img src="/pages/PrivateSky/PrivateSky.png"></psk-img>
 
     <psk-toc></psk-toc>
 
