--- a/pages/PrivateSky/main-innovations.html
+++ b/pages/PrivateSky/main-innovations.html
@@ -4,7 +4,7 @@
     </psk-chapter>
 
   <psk-chapter title="EDFS sub-project">
-    <psk-img src="PrivateSky/EDFS.png" title="Relation between the EDFS major concepts"></psk-img>
+    <psk-img src="/pages/PrivateSky/EDFS.png" title="Relation between the EDFS major concepts"></psk-img>
 
      PrivateSky efforts to offer to create a database for storing private data conducted us to propose the  EDFS (Encrypted Distributed File System) that is both a file system and a blockchain based distributed database.
     The main purpose of EDFS is to serve as near-chain (off-chain) storage for blockchains.
