--- a/pages/psk-wiki/psk-img.html
+++ b/pages/psk-wiki/psk-img.html
@@ -22,13 +22,13 @@
 
     <psk-chapter title="Code Example">
         <psk-code>
-            <psk-img title="PSK-img Example" src="PrivateSky/EDFS.png">
+            <psk-img title="PSK-img Example" src="/pages/PrivateSky/EDFS.png">
             </psk-img>
         </psk-code>
     </psk-chapter>
 
     <psk-example title="Live Example">
-        <psk-img title="PSK-img Example" src="PrivateSky/EDFS.png">
+        <psk-img title="PSK-img Example" src="/pages/PrivateSky/EDFS.png">
         </psk-img>
     </psk-example>
 </psk-page>
