--- a/pages/psk-wiki/psk-img.html
+++ b/pages/psk-wiki/psk-img.html
@@ -5,10 +5,9 @@
 
     <psk-description>
         <p>This component renders an image on the UI using the given properties.</p>
-        <p>If the source property ( <b>src</b> ) does contain a <b>http</b> string in it then the <code>path</code> will
-            get the <code>src</code> property.</p>
-        <p>If the <b>http</b> string is not given then the <code>path</code> will be constructed from scratch but only
-            images in that <code>page</code> can be rendered.</p>
+        <p>The <code>src</code>property uses the relative path to that image.</p>
+        <p>This component's works the same way as the <code>img</code> tag in HTML.Even when image does not exist at the
+            given src.</p>
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
@@ -29,6 +28,8 @@
 
     <psk-example title="Live Example">
         <psk-img title="PSK-img Example" src="/pages/PrivateSky/EDFS.png">
+        </psk-img>
+        <psk-img title="Not existing url Example" src="/pages/PrivateSky/ED.png">
         </psk-img>
     </psk-example>
 </psk-page>
