--- a/pages/web-components/container.html
+++ b/pages/web-components/container.html
@@ -11,7 +11,7 @@
                 <psk-controller></psk-controller>
             </psk-code>
         </p>
-        <span>It also uses <psk-link page="web-components/psk-page-loader">psk-page-loader</psk-link></span>
+        <span>It also uses <psk-link page="web-components/psk-page-loader">psk-page-loader</psk-link>.</span>
     </psk-description>
 
     <psk-property-descriptor title="Supported properties">
