added example on psk-img.html

--- a/pages/psk-wiki/psk-img.html
+++ b/pages/psk-wiki/psk-img.html
@@ -24,6 +24,10 @@
             <psk-img title="PSK-img Example" src="/pages/PrivateSky/EDFS.png">
             </psk-img>
         </psk-code>
+        <psk-code>
+            <psk-img title="Not existing url Example" src="/pages/PrivateSky/ED.png">
+            </psk-img>
+        </psk-code>
     </psk-chapter>
 
     <psk-example title="Live Example">
