--- a/pages/psk-wiki/psk-img.html
+++ b/pages/psk-wiki/psk-img.html
@@ -24,16 +24,19 @@
             <psk-img title="PSK-img Example" src="/pages/PrivateSky/EDFS.png">
             </psk-img>
         </psk-code>
+        <psk-example>
+            <psk-img title="PSK-img Example" src="/pages/PrivateSky/EDFS.png">
+            </psk-img>
+        </psk-example>
+
         <psk-code>
             <psk-img title="Not existing url Example" src="/pages/PrivateSky/ED.png">
             </psk-img>
         </psk-code>
+        <psk-example>
+            <psk-img title="Not existing url Example" src="/pages/PrivateSky/ED.png">
+            </psk-img>
+        </psk-example>
     </psk-chapter>
 
-    <psk-example title="Live Example">
-        <psk-img title="PSK-img Example" src="/pages/PrivateSky/EDFS.png">
-        </psk-img>
-        <psk-img title="Not existing url Example" src="/pages/PrivateSky/ED.png">
-        </psk-img>
-    </psk-example>
 </psk-page>
