--- a/pages/psk-wiki/psk-img.html
+++ b/pages/psk-wiki/psk-img.html
@@ -24,7 +24,7 @@
             <psk-img title="PSK-img Example" src="/pages/PrivateSky/EDFS.png">
             </psk-img>
         </psk-code>
-        <psk-example>
+        <psk-example title = "Working Example">
             <psk-img title="PSK-img Example" src="/pages/PrivateSky/EDFS.png">
             </psk-img>
         </psk-example>
@@ -33,7 +33,7 @@
             <psk-img title="Not existing url Example" src="/pages/PrivateSky/ED.png">
             </psk-img>
         </psk-code>
-        <psk-example>
+        <psk-example title = "Not working Example">
             <psk-img title="Not existing url Example" src="/pages/PrivateSky/ED.png">
             </psk-img>
         </psk-example>
