--- a/pages/web-components/feedback-list.html
+++ b/pages/web-components/feedback-list.html
@@ -12,7 +12,7 @@
             in distinctive notifications(the <code>message</code> is not mandatory) and a <code>name</code> for each
             message(again,this is not mandatory)
             and the type of feedback you want to show.</p>
-        <psk-code>
+        <psk-code language="javascript">
             this.showFeedbackHandler.emit({ message: 'Example', name: 'Example-Name', type: 'toast' })
         </psk-code>
         <p>The alerts are stackable and they will only show a specific number of them(only on toast type notifications).
