--- a/pages/About/how-to-write-documentation-pages.html
+++ b/pages/About/how-to-write-documentation-pages.html
@@ -69,7 +69,7 @@
       </p>
       <p>You can checkout this app and private-sky webcomponents from GitHub.</p>
       <p>
-        <a class="btn btn-primary" href="https://github.com/PrivateSky/pwc-apps" target="_blank">Checkout this app</a>
+        <a class="btn btn-primary" href="https://github.com/PrivateSky/cardinal" target="_blank">Checkout this app</a>
         <a class="btn btn-primary" href="https://github.com/PrivateSky/pskwebcomponents" target="_blank">Checkout
           psk-webcomponents</a>
       </p>
