--- a/pages/PrivateSky/interactions.html
+++ b/pages/PrivateSky/interactions.html
@@ -10,8 +10,15 @@
   <psk-chapter title="Benefits of the interactions">
     <psk-list>
         The main benefit is that you could have different code on the client side while still using the same server side swarm
-        Another benefit is that
+        Abstract the remote part of the swarm. It is possibile to start swarms over
+        Another benefit is that the swarm communication paradigm can be used properly on the server
     </psk-list>
   </psk-chapter>
+
+    <psk-chapter title="The PowerCord Concept">
+        <psk-list>
+
+        </psk-list>
+    </psk-chapter>
 
 </psk-page>
