--- a/pages/psk-wiki/psk-img.html
+++ b/pages/psk-wiki/psk-img.html
@@ -6,7 +6,7 @@
     <psk-description>
         <p>This component renders an image on the UI using the given properties.</p>
         <p>The <code>src</code>property uses the relative path to that image.</p>
-        <p>This component's works the same way as the <code>img</code> tag in HTML but in can only render images from
+        <p>This component's works the same way as the <code>img</code> tag in HTML but it can only render images from
             inside that website.</p>
     </psk-description>
 
