new example on psk-table.html

--- a/pages/psk-wiki/psk-table.html
+++ b/pages/psk-wiki/psk-table.html
@@ -29,14 +29,33 @@
                 Title | Author | Published Year | Number of pages
             </psk-table>
         </psk-code>
+
+        <psk-example title="Full table Example">
+            <psk-table head="true" footer="true">
+                Title | Author | Published Year | Number of pages
+                The Water Dancer | Ta-Nehisi Coates | 2019 | 416
+                Maggie Brown & Others: Stories | Peter Orner | 2019 | 336
+                Title | Author | Published Year | Number of pages
+            </psk-table>
+        </psk-example>
+
+        <psk-code>
+            <psk-table head="true" footer="true">
+                Title | | | Number of pages
+                The Water Dancer | Ta-Nehisi Coates | | 416
+                Maggie Brown & Others: Stories | Peter Orner | | 336
+                Title | Author | | Number of pages
+            </psk-table>
+        </psk-code>
+
+        <psk-example title="Empty spaces table Example">
+            <psk-table head="true" footer="true">
+                Title | | | Number of pages
+                The Water Dancer | Ta-Nehisi Coates | | 416
+                Maggie Brown & Others: Stories | Peter Orner | | 336
+                Title | Author | | Number of pages
+            </psk-table>
+        </psk-example>
     </psk-chapter>
 
-    <psk-example title="Live Example">
-        <psk-table head="true" footer="true">
-            Title | Author | Published Year | Number of pages
-            The Water Dancer | Ta-Nehisi Coates | 2019 | 416
-            Maggie Brown & Others: Stories | Peter Orner | 2019 | 336
-            Title | Author | Published Year | Number of pages
-        </psk-table>
-    </psk-example>
 </psk-page>
