new example psk-table.html

--- a/pages/psk-wiki/psk-table.html
+++ b/pages/psk-wiki/psk-table.html
@@ -56,6 +56,22 @@
                 Title | Author | | Number of pages
             </psk-table>
         </psk-example>
+        <psk-code>
+            <psk-table head="true" footer="true">
+                Title | Author | Published Year | Number of pages
+                 | Ta-Nehisi Coates | 2019 | 416
+                Maggie Brown & Others: Stories | Peter Orner | 2019 | 336
+                 | Author | Published Year | Number of pages
+            </psk-table>
+        </psk-code>
+        <psk-example title="Colsan Example">
+            <psk-table head="true" footer="true">
+                Title | Author | Published Year | Number of pages
+                 | Ta-Nehisi Coates | 2019 | 416
+                Maggie Brown & Others: Stories | Peter Orner | 2019 | 336
+                 | Author | Published Year | Number of pages
+            </psk-table>
+        </psk-example>
     </psk-chapter>
 
 </psk-page>
