--- a/pages/psk-wiki/psk-table.html
+++ b/pages/psk-wiki/psk-table.html
@@ -58,13 +58,16 @@
         </psk-example>
         <psk-code>
             <psk-table head="true" footer="true">
-                Title | Author | Published Year | Number of pages
-                 | Ta-Nehisi Coates | 2019 | 416
-                Maggie Brown & Others: Stories | Peter Orner | 2019 | 336
-                 | Author | Published Year | Number of pages
+                Author | Song | Published Year | 
+                 | I want to break free | 1984
+                Queen |  I want it all | 1989
+                 | The show must go an | 1991
+                 | California Love | 1996
+                2Pac | Only god can judge me| 1996
+                 | Ambitionz az a ridah | 1996
             </psk-table>
         </psk-code>
-        <psk-example title="Colsan Example">
+        <psk-example title="Rowspan Example">
             <psk-table head="true" footer="true">
                 Author | Song | Published Year | 
                  | I want to break free | 1984
