--- a/pages/Development/advanced.html
+++ b/pages/Development/advanced.html
@@ -102,7 +102,7 @@
   <psk-chapter title="Syntax of Annotations">
   	<p align="justify">We will use the EBNF (Extended Backus-Naur Form) to describe the specific syntax of the new annotation mechanisms achieved through research in collaboration with the DPO.</p>
 
-  <psk-img src="/pages/Development/SwarmVariableSyntax.png"></psk-img>
+  <psk-img src="/pages/Development/SwarmVariableSyntax.PNG"></psk-img>
 
 <psk-table title="Annotations syntax definition" dimensions="50|50" head="false">
 	adnotations                 | params
