--- a/pages/Development/advanced.html
+++ b/pages/Development/advanced.html
@@ -70,13 +70,13 @@
     	<b>Type</b> | <b>Aspects that can be programmed using AOP with annotations</b>
     	flow | checking data types
     	swarm (verifiable choreography) | checking data types
-    	| checking data types
-    	encrypted choreography | automatic encryption / decryption
+    	encrypted choreography | checking data types
+    	| automatic encryption / decryption
     	| automatic signature / verification
         serverless choreography | checking data types
-        | checking value data types
+        asset | checking value data types
         | checking reference data types
-        asset	|	generate GraphQL schemes
+        |	generate GraphQL schemes
         |	GraphQL code generation for queries
         |	GraphQL code generation for mutations
         |	indexing assets
