--- a/pages/PrivateSky/swarms-explained.html
+++ b/pages/PrivateSky/swarms-explained.html
@@ -62,4 +62,53 @@ their character as processes and refining them in order to achieve conceptual un
 <p align="justify">Swarm communication is a generalization and unification of object oriented programming (OOP), as well as asynchronous programming through message passing. All the code decomposition techniques in OOP are welcomed and required as well in swarm communication programming.</p>
 </psk-chapter>
 
+<psk-chapter title="Swarm categories">
+  <p align="justify"> In our perspective on swarm programming, a class definition is a particular case of swarm description, as the classes instances (objects) are a particular case of degenerate swarm ( a swarm with a single object). We may observe that the concept of an instance of an object is not applicable to the persistent objects (objects serialized into a database and subsequently deserialized). That is because in order to be accurate, such a serializable object has actually more instances (usually these instances are not present at the same time but at different moments). Although this debate may seem overly academic and lacking practicality at first, our research has shown that this perspective enables unification of a larger set of concepts, brought together under the concept of swarm categories. These swarm categories are built to model different processes categories.</p>
+
+<psk-img title="Swarm categories"  src="/pages/PrivateSky/SwarmCategories.png"></psk-img>
+
+<p align="justify">It is worth mentioning that our preceding articles are also identifying 3 executable choreographies categories:</p>
+<ul>
+  <il align="justify"><b>Verifiable Choreographies</b> highlighting that using choreographies simplifies code verification by separating the API level and the integration level (the choreography level). All the swarm choreographies are verifiable choreographies.</il>
+  <li align="justify"><b>Encrypted Choreographies:</b> these are choreographies providing additional cryptographic functionalities for execution. In PrivateSky the encrypted choreographies are based on the concept of SecurityContext, a global service in the execution environments of the swarms that facilitates the management and use of cryptographic keys.</li>
+  <li align="justify"><b>Serverless  Choreographies: </b> these are choreographies executed on a Function As Service similar model; however, instead of using functions, we have complex and potentially interactive choreographies (meaning they are not query return but may run a more complex bilateral communication).</li>
+</ul>
+
+<psk-table title = "Swarm categories" dimensions="25|25|50" head="true">
+<b>Category</b> | <b>Role</b> | <b>Details</b>
+<b>Flow (callflow)</b> | OOP programming, Asynchronicity control (short living processes) | The degenerated form of swarm communications that does not allow network communication but highlights the process aspect of the swarm communication. The flow concept (also named callflow) is very similar to the class concept. The flow are instantiated in objects, just as classes. A flow instance has a JavaScript object instance (there may be imagined, of course, other implementation platforms of these concepts; however, in the case of PrivateSky, by each flow instance we mean precisely a single instantiated JavaScript object). The flows are not serializable.
+<b>Swarm (executable choreography)</b> | Executable choreoghraphies implementation(short living integration processes) | Swarm communication was designed to implement executable choreographies. Subsequently, our team observed that the same concept may also be used in other purposes (OOP, Asynchronicity control, smart contracts programming). A swarm is a flow with a special set of primitives.   Unlike the flows, where a single instantiated object is associated to a swarm instance, the concept of swarm instance enables multiple instances (the same swarm instance has multiple instantiated  objects on different network locations).
+<b>Workflow</b> | Long living processes | The workflows are serializable flows saved and recalled in order to implement long life processes. A workflow enables the modelling of workflows and business processes in the BPM (Business Process Management) environment. 
+<b>Asset</b> | The data storage unit in blockchain | A swarm is a flow with a set of special primitives. An asset is always a serializable object (it cannot have unserializable members).
+<b>Transaction</b> | Enables operations on the assets stored in blockchain | A transaction is a flow with a set of special primitives required to modify the assets stored in the blockchain. The operations are subjected to consensus and only after the consensus is achieved the changes are effectively operated. The swarm instances of the transaction category are serializable.
+<b>Embedded objects</b> | Embedded objects in other swarms | These flows are processes with their identity strictly dependent on the identity of another swarm.
+<b>Interactions</b> | Complementarity | Definitions of processes created to be complementary with swarm excuted in another security contexts.
+<b>Smart contract</b> | Blockchain based  long living processes | In PrivateSky, a smart contract is a collection of assets and transactions developed in order to implement a workflow (considered as a long living process) manageable under the consensus and regulations of a blockchain. 
+</psk-table>
+
+<p align="justify">In the list above, a very special swarm category is “embedded object”. An embedded swarm is always linked to a “global” swarm. A global swarm may be a workflow or an asset.</p>
+<p align="justify">Modern programming languages have a reference concept. Values may be assigned to a reference, these values being objects (class instances). In these languages with references, the uncontrolled copying of references is an issue. If an object holds more references (references that are data fields in other objects), then there is ambiguity regarding the ownership of the referenced object. The referenced object may not belong to any of the objects that are referencing it or, on the contrary, it may belong to only one of the objects from the logical perspective. The concept of embedded object introduces the explicit existence of this difference. The main semantic shift is that at the moment an embedded object is referenced, the value should be copied (cloning of the object), not the reference be modified. This property is able to potentially eliminate entire software error classes, being difficult to detect otherwise. For example, the experience gained by previously designing component frameworks for developing graphic interfaces led us to believe this innovation may be especially important to downsize a lot of “boilerplate” code and to create elegant MVVM  (Model View ViewModel) frameworks. We also believe that for server-side programming, the semantic for the embedded objects references may avoid data corrupting errors. The embedded objects are to be introduced in PrivateSky somewhere in the future.</p>
+</psk-chapter>
+
+<psk-chapter title="Different kinds of identities">
+  <psk-img title="Categories of relevant identities for  swarm communication" src="/pages/PrivateSky/IDCategories.png"></psk-img>
+
+  <p align="justify">The concept of identity is used in 4 different ways, possibly generating confusion. We may be, as such, in one of the following situations:</p>
+<ul>
+  <li><b>The identity of the processing node (Nodeld).</b></li>
+  <p align="justify">This identity is an address (or URL) uniquely and accurately identifying the address where the swarm messages are sent to be executed.</p>
+  <li><b>The identity of the agent on the behalf of the processing is made (AgentId).</b></li>
+  <p align="justify">A processing node may execute code on behalf of more users. The users on the processing nodes are represented by the name of agent or even agent identity. These agent identities are decentralized identities or self sovereign identities.</p>
+  <li><b>The collective identity of the swarm instance (SwarmId).</b></li>
+  <p align="justify">Any swarm instance has a collective identity, meaning an identity common to all the swarm’s members. The instance identity is a cryptographically generated  UID (Unique Identifier). In the cases of assets or workflows, the SwarmId is a good candidate for a primary artificial key, should a certain category of asset collection would be considered as a table.</p>
+  <li><b>The identity of a phase execution (PhaseId).</b></li>
+  <p align="justify">The execution of a swarm phase generates an object that is automatically integrated in the swarm collective identity. However, it is useful to also keep the identity of these objects, under the concept of the identity of a phase execution. This identity is also a cryptographically generated UID.</p>
+</ul>
+
+<p align="justify"> In PrivateSky, the swarm primitive uses AgentId as the location of a swarm phase execution by using a name service able to trace AgentId to NoteId.</p>
+<p align="justify"> An AgentId may have one or several NoteId allowing code execution based on the <b>serverless choreographies</b> model.
+
+
+</psk-chapter>
+
 </psk-page>
